--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/dialog": "^0.2.9",
     "date-fns": "^2.2.1",
     "formik": "^1.5.8",
     "isomorphic-unfetch": "^3.0.0",
