--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/dialog": "^0.2.9",
     "isomorphic-unfetch": "^3.0.0",
+    "querystring": "^0.2.0",
     "react": "^16.9.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
