--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "surge build pharma-foresight.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
